# aidoku-sources

./: .gitignore  .oxfmtrc.json  Cargo.toml  Makefile  README.md  mise.toml  package.json  pnpm-lock.yaml  rust-toolchain.toml
.github/: typos.toml
.github/workflows/: codeql-analysis.yml  publish.yml  test.yml
crates/helper/: Cargo.toml
crates/helper/src/: lib.rs
sources/fr.anime-sama/: Cargo.toml
sources/fr.anime-sama/res/: source.json
sources/fr.anime-sama/src/: lib.rs  parse.rs
sources/fr.lelscanfr/: Cargo.toml
sources/fr.lelscanfr/res/: source.json
sources/fr.lelscanfr/src/: lib.rs
sources/fr.mangamoins/: Cargo.toml
sources/fr.mangamoins.com/res/: source.json
sources/fr.mangamoins.com/src/: helper.rs  lib.rs
sources/fr.mangamoins/res/: source.json
sources/fr.mangamoins/src/: lib.rs  parse.rs
sources/fr.sushiscan/: Cargo.toml
sources/fr.sushiscan/res/: source.json
sources/fr.sushiscan/src/: lib.rs
