[package]
name = "mangamoins"
version = "0.0.1"
description = "source for mangamoins"
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
aidoku = { workspace = true }


[dev-dependencies]
aidoku = { workspace = true, features = ["test"] }
aidoku-test = { workspace = true }

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true
